<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hesham.baking.Detail">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/coordinator_appbar_layout_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/my_collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="center_horizontal"
            >

            <ImageView
                android:id="@+id/toolbarImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:contentDescription="@string/ingredient_content_description"
                app:layout_collapseMode="parallax" />

            <TextView
                android:id="@+id/img_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/coordinator_toolbar_textsize"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/coordinator_text_margin"
                android:textColor="@color/colorWhite"
                app:layout_collapseMode="pin"
                />


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>



    <!--Place all your content inside this nested view -->
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/NestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ingridient_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onClick_Ingredient"
            card_view:cardCornerRadius="@dimen/layout_card_corner_raduis"
            card_view:contentPadding="@dimen/layout_card_space"
            android:layout_margin="@dimen/layout_card_space"
            android:layout_marginBottom="@dimen/layout_card_space"
            >

     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
            <ImageView
                android:id="@+id/ingredient_image"
                android:layout_width="@dimen/ingredient_img_width"
                android:layout_height="@dimen/ingredient_img_hieght"
                android:adjustViewBounds="true"
                android:src="@drawable/bakeicon"
                android:layout_marginLeft="@dimen/step_layout_margin"
                android:contentDescription="@string/ingredient_content_description"
                />

            <TextView
                android:id="@+id/ingredient_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="@dimen/steps_ingredient_text_size"
                android:text="@string/text_ingredients"
                />

         <ImageView
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="@dimen/divider_height"
             android:layout_marginTop="@dimen/steps_content_margin"
             android:background="@color/colorBlack"
             android:layout_below="@id/ingredient_text"
             android:contentDescription="@string/line_divider"
             />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_steps"
                android:layout_marginTop="@dimen/steps_content_margin"
                android:layout_below="@id/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
            </android.support.v7.widget.RecyclerView>
     </RelativeLayout>

        </android.support.v7.widget.CardView>



    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>


